examples/errors/parsing/if-empty-then.cn
main : () [impure] =
  if true then else 2
